# medical-ai-assistant

./: .coverage  .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY_RENDER.md  Dockerfile  INSTALL.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  agent_card.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.py  runbook_incident.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
app/: __init__.py  main.py
app/agents/: __init__.py  base.py  medical_advice.py  monitoring.py  risk_assessment.py  supervisor.py  symptom_analysis.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  exceptions.py
app/dashboard/: __init__.py  html.py
app/database/: __init__.py  connection.py  models.py
app/graph/: __init__.py  workflow.py
app/middleware/: __init__.py  correlation.py
app/monitoring/: __init__.py  service.py
app/prompts/: __init__.py  agent_prompts.py
app/schemas/: __init__.py  responses.py
app/services/: __init__.py  medical_service.py
app/templates/: chat.html
app/utils/: __init__.py
data/: medical_ai.db
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_api_coverage.py  test_core.py  test_coverage_gaps.py  test_database.py  test_main.py  test_middleware.py  test_monitoring.py  test_services.py  test_workflow.py
